Bug 798828 - fix "warning: overflow in implicit constant conversion [-Woverflow]" in mailnews/local/src/nsParseMailbox.cpp by converting some functions to nsresult. r=Neil