mailnews/local/src/nsParseMailbox.h
@@ -56,12 +56,12 @@ public:
   virtual               ~nsParseMailMessageState();
 
   void                  Init(uint32_t fileposition);
-  virtual int32_t       ParseFolderLine(const char *line, uint32_t lineLength);
-  virtual int           StartNewEnvelope(const char *line, uint32_t lineLength);
-  int                   ParseHeaders();
-  int                   FinalizeHeaders();
-  int                   ParseEnvelope (const char *line, uint32_t line_size);
-  int                   InternSubject (struct message_header *header);
+  virtual nsresult      ParseFolderLine(const char *line, uint32_t lineLength);
+  virtual nsresult      StartNewEnvelope(const char *line, uint32_t lineLength);
+  nsresult              ParseHeaders();
+  nsresult              FinalizeHeaders();
+  nsresult              ParseEnvelope (const char *line, uint32_t line_size);
+  nsresult              InternSubject (struct message_header *header);
 
   static bool    IsEnvelopeLine(const char *buf, int32_t buf_size);
   static int  msg_UnHex(char C);
@@ -162,7 +162,7 @@ public:
   virtual void  AbortNewHeader();
 
   // for nsMsgLineBuffer
-  virtual int32_t HandleLine(char *line, uint32_t line_length);
+  virtual nsresult HandleLine(char *line, uint32_t line_length);
 
   void  UpdateDBFolderInfo();
   void  UpdateDBFolderInfo(nsIMsgDatabase *mailDB);
